--- a/app/src/main/res/layout/frminspectionfromterminal.xml
+++ b/app/src/main/res/layout/frminspectionfromterminal.xml
@@ -63,6 +63,14 @@
                 android:drawableStart="@drawable/time"
                 android:id="@+id/txtDateTime"
                 android:textSize="12sp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/nav_bluetooth"
+                android:id="@+id/bluetooth"
+                android:paddingRight="15sp" />
+
+
         </LinearLayout>
     </RelativeLayout>
 
