--- a/app/src/main/res/layout/actionbar_bluetooth.xml
+++ b/app/src/main/res/layout/actionbar_bluetooth.xml
@@ -57,6 +57,15 @@
             android:textSize="12sp"/>
 
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/nav_bluetooth"
+        android:id="@+id/bluetooth"
+        android:paddingRight="15sp" />
+
+
     </LinearLayout>
 
 </LinearLayout>
