--- a/app/src/main/res/layout/frmmain.xml
+++ b/app/src/main/res/layout/frmmain.xml
@@ -6,7 +6,6 @@
     android:weightSum="6">
 
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,35 +13,66 @@
         android:background="#5956c871"
         >
 
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="3sp"
+            android:id="@+id/date"
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/companyName"
+                android:layout_weight="1"
+                android:padding="5sp"
+                android:text="Dela Rosa"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="22dp"
+                android:text="Date"
+                android:layout_weight="1"
+                android:id="@+id/datetime" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="22dp"
-            android:layout_marginStart="22dp"
-            android:layout_marginTop="24dp"
-            android:id="@+id/companyName" />
+            android:orientation="vertical"
+            android:layout_below="@+id/date"
+            android:padding="3sp">
 
-        <TextView
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/companyName"
-            android:layout_alignRight="@+id/companyName"
-            android:layout_alignEnd="@+id/companyName"
-            android:layout_marginTop="16dp"
-            android:id="@+id/devicename" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/devicename"
-            android:layout_alignLeft="@+id/devicename"
-            android:layout_alignStart="@+id/devicename"
-            android:layout_marginTop="23dp"
-            android:id="@+id/battstatus" />
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/devicename"
+                android:text="device name"
+                android:padding="5sp"
+                android:layout_centerVertical="true" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/battstatus"
+                android:padding="5sp"
+                android:text="batt"/>
+
+        </LinearLayout>
+
+
+
+
     </RelativeLayout>
 
     <RelativeLayout
