--- a/app/src/main/res/layout/frmreverse.xml
+++ b/app/src/main/res/layout/frmreverse.xml
@@ -17,7 +17,7 @@
         <include android:id="@+id/actionbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            layout="@layout/actionbar"/>
+            layout="@layout/actionbar_bluetooth"/>
 
 
     </RelativeLayout>
