--- a/app/src/main/res/layout/menu_control.xml
+++ b/app/src/main/res/layout/menu_control.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent">
 
 
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -14,10 +13,10 @@
             <Button
                 android:text="Inspector"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/inspectors"
                 android:layout_weight="1"
-                android:background="@drawable/border_radius"
+                android:background="@drawable/button_radius"
                 android:padding="10sp"/>
         <TextView
             android:layout_width="wrap_content"
@@ -30,7 +29,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/controller"
                 android:layout_weight="1"
-                android:background="@drawable/border_radius"
+                android:background="@drawable/button_radius"
                 android:padding="10sp"/>
 
 
@@ -44,20 +43,20 @@
                 android:layout_height="match_parent"
                 android:id="@+id/arrival"
                 android:layout_weight="1"
-                android:background="@drawable/border_radius"/>
+                android:background="@drawable/button_radius"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
-                android:text="Inspection from Terminal"
+                android:text="Dispatch from Terminal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/ift"
                 android:padding="10sp"
-                android:layout_weight="1"
-                android:background="@drawable/border_radius"/>
+                android:layout_weight="6.10"
+                android:background="@drawable/button_radius"/>
 
         </LinearLayout>
 </LinearLayout>
