--- a/app/src/main/res/layout/modal_employeelogin.xml
+++ b/app/src/main/res/layout/modal_employeelogin.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent">
 
 
-    <AutoCompleteTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Name"
-        android:ems="10"
-        android:id="@+id/name"
-        android:gravity="center"/>
+    <!--<AutoCompleteTextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:inputType="textPersonName"-->
+        <!--android:hint="Name"-->
+        <!--android:ems="10"-->
+        <!--android:id="@+id/name"-->
+        <!--android:gravity="center"/>-->
 
     <EditText
         android:layout_width="match_parent"
