--- a/app/src/main/res/layout/main_menu_grid.xml
+++ b/app/src/main/res/layout/main_menu_grid.xml
@@ -4,55 +4,37 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:layout_gravity="center"
-    android:paddingTop="20sp"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="150sp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border_radius"
-        android:orientation="vertical"
-
-        >
-
-    <ImageView
-        android:id="@+id/grid_image"
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/dispatch"
-        android:padding="8sp"
-        >
-    </ImageView>
+        android:layout_alignParentLeft="true"
 
+        android:layout_toLeftOf="@+id/relativeLayout1"
+        android:orientation="vertical"
+        android:background="@drawable/border_radius">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#33000000">
+        <ImageView
+            android:id="@+id/grid_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="center"
+            android:padding="3dip"
+            />
 
         <TextView
             android:id="@+id/grid_text"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:padding="5dip"
-            android:layout_marginLeft="15sp"
-            android:layout_marginRight="15sp"
-            android:textColor="#ffffffff"
-            android:text="test" />
-        <!--<TextView
-            android:id="@+id/grid_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:textColor="@android:color/white"
-            android:layout_below="@+id/grid_image"/>-->
-
-    </LinearLayout>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="5dp"
+            android:textColor="#fff"
+            android:background="#33000000"
+            android:typeface="sans"
+            android:textSize="12dip"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
