udpate in inspector

--- a/app/src/main/res/layout/frminspectionfromterminal.xml
+++ b/app/src/main/res/layout/frminspectionfromterminal.xml
@@ -106,22 +106,21 @@
 
 
 
-        <AutoCompleteTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Name"
-            android:ems="10"
-            android:id="@+id/ift_name"
-            android:gravity="center"/>
+        <!--<AutoCompleteTextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:inputType="textPersonName"-->
+            <!--android:hint="Name"-->
+            <!--android:ems="10"-->
+            <!--android:id="@+id/ift_name"-->
+            <!--android:gravity="center"/>-->
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:ems="10"
-            android:hint="Password"
-            android:id="@+id/ift_password"
+            android:hint="Enter Pax"
+            android:id="@+id/paxCount"
             android:gravity="center"/>
 
 
