--- a/app/src/main/res/layout/main_menu_grid.xml
+++ b/app/src/main/res/layout/main_menu_grid.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100sp"
+        android:layout_height="100sp"
         android:layout_alignParentLeft="true"
 
         android:layout_toLeftOf="@+id/relativeLayout1"
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="center"
+            android:layout_gravity="center"
             android:padding="3dip"
             />
 
