--- a/app/src/main/res/layout/frmdispatch.xml
+++ b/app/src/main/res/layout/frmdispatch.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
+
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
+        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
+        <!--</android.support.v7.widget.Toolbar>-->
+
 
     <!-- Header aligned to top -->
     <RelativeLayout
@@ -14,10 +24,10 @@
         android:layout_alignParentTop="true"
         android:gravity="center">
 
-        <include android:id="@+id/actionbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/actionbar_bluetooth"/>
+        <!--<include android:id="@+id/actionbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--layout="@layout/actionbar_bluetooth"/>-->
 
         <AutoCompleteTextView
             android:layout_width="fill_parent"
@@ -29,7 +39,7 @@
             android:layout_alignParentStart="true"
             android:id="@+id/d_name"
             android:gravity="center"
-            android:layout_below="@id/actionbar"/>
+            />
 
     </RelativeLayout>
 
