--- a/app/src/main/res/layout/frmmain.xml
+++ b/app/src/main/res/layout/frmmain.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.5"
         android:background="#5956c871"
         >
 
@@ -78,28 +78,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="4.5"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center"
-            android:layout_gravity="center"
+
             >
             <GridView
                 android:id="@+id/myGrid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingLeft="3sp"
-                android:paddingRight="3sp"
-                android:paddingTop="10sp"
-                android:horizontalSpacing="3sp"
-                android:verticalSpacing="3sp"
                 android:stretchMode="columnWidth"
-                android:numColumns="2" >
+                android:horizontalSpacing="10sp"
+                android:verticalSpacing="18sp"
+                android:numColumns="2"
+                android:padding="15sp">
 
             </GridView>
         </LinearLayout>
