--- a/app/src/main/res/layout/frmpartial.xml
+++ b/app/src/main/res/layout/frmpartial.xml
@@ -12,57 +12,57 @@
         android:gravity="center">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#00a20f"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="#00a20f"-->
+            <!--android:orientation="horizontal">-->
 
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="40sp"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Large Text"
-                android:textColor="#ffffff"
-                android:layout_weight="1"
-                android:drawableStart="@drawable/nav_user"
-                android:gravity="start|center"
-                android:id="@+id/txtUser"
-                android:drawableLeft="@drawable/nav_user"
-                android:textSize="12sp"/>
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="40sp"-->
+                <!--android:paddingLeft="10sp"-->
+                <!--android:paddingRight="10sp"-->
+                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                <!--android:text="Large Text"-->
+                <!--android:textColor="#ffffff"-->
+                <!--android:layout_weight="1"-->
+                <!--android:drawableStart="@drawable/nav_user"-->
+                <!--android:gravity="start|center"-->
+                <!--android:id="@+id/txtUser"-->
+                <!--android:drawableLeft="@drawable/nav_user"-->
+                <!--android:textSize="12sp"/>-->
 
-            <TextView
-                android:layout_width="0sp"
-                android:layout_height="40sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Large Text"
-                android:textColor="#ffffff"
-                android:gravity="start|center|end"
-                android:layout_weight="1"
-                android:drawablePadding="-6sp"
-                android:drawableLeft="@drawable/battery"
-                android:drawableStart="@drawable/battery"
-                android:id="@+id/txtBattery"
-                android:textSize="12sp"/>
+            <!--<TextView-->
+                <!--android:layout_width="0sp"-->
+                <!--android:layout_height="40sp"-->
+                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                <!--android:text="Large Text"-->
+                <!--android:textColor="#ffffff"-->
+                <!--android:gravity="start|center|end"-->
+                <!--android:layout_weight="1"-->
+                <!--android:drawablePadding="-6sp"-->
+                <!--android:drawableLeft="@drawable/battery"-->
+                <!--android:drawableStart="@drawable/battery"-->
+                <!--android:id="@+id/txtBattery"-->
+                <!--android:textSize="12sp"/>-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="40sp"
-                android:paddingLeft="2sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Large Text"
-                android:textColor="#ffffff"
-                android:layout_weight="1"
-                android:gravity="start|center|end"
-                android:drawablePadding="6sp"
-                android:drawableLeft="@drawable/time"
-                android:drawableStart="@drawable/time"
-                android:id="@+id/txtDateTime"
-                android:textSize="12sp"/>
-        </LinearLayout>
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="40sp"-->
+                <!--android:paddingLeft="2sp"-->
+                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                <!--android:text="Large Text"-->
+                <!--android:textColor="#ffffff"-->
+                <!--android:layout_weight="1"-->
+                <!--android:gravity="start|center|end"-->
+                <!--android:drawablePadding="6sp"-->
+                <!--android:drawableLeft="@drawable/time"-->
+                <!--android:drawableStart="@drawable/time"-->
+                <!--android:id="@+id/txtDateTime"-->
+                <!--android:textSize="12sp"/>-->
+        <!--</LinearLayout>-->
     </RelativeLayout>
 
     <!-- Footer aligned to bottom -->
