--- a/app/src/main/res/layout/frmreverse.xml
+++ b/app/src/main/res/layout/frmreverse.xml
@@ -14,10 +14,10 @@
         android:layout_alignParentTop="true"
         android:gravity="center">
 
-        <include android:id="@+id/actionbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/actionbar_bluetooth"/>
+        <!--<include android:id="@+id/actionbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--layout="@layout/actionbar_bluetooth"/>-->
 
 
     </RelativeLayout>
