--- a/app/src/main/res/layout/main_menu_grid.xml
+++ b/app/src/main/res/layout/main_menu_grid.xml
@@ -6,36 +6,27 @@
     android:layout_gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
-        android:layout_alignParentLeft="true"
-
-        android:layout_toLeftOf="@+id/relativeLayout1"
-        android:orientation="vertical"
-        android:background="@drawable/border_radius">
-
+    <RelativeLayout
+        android:layout_width="130sp"
+        android:layout_height="110sp"
+        android:background="@drawable/border_radius"> // Only works inside a RelativeLayout
         <ImageView
-            android:id="@+id/grid_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="center"
-            android:layout_gravity="center"
-            android:padding="3dip"
+            android:id="@+id/myImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/reverse"
             />
 
         <TextView
-            android:id="@+id/grid_text"
-            android:layout_width="fill_parent"
+            android:id="@+id/myImageViewText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="5dp"
-            android:textColor="#fff"
-            android:background="#33000000"
-            android:typeface="sans"
-            android:textSize="12dip"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:layout_alignLeft="@+id/myImageView"
+            android:layout_alignRight="@+id/myImageView"
+            android:layout_alignBottom="@+id/myImageView"
+            android:gravity="bottom|center"
+            android:text="Hello"
+            android:textColor="#ffffff"
+            android:background="#40000000"/>
+    </RelativeLayout>
 </LinearLayout>
